# ccminer-tpfuemp

./: .gitignore  CREDITS.txt  Makefile.am  README.md  README.txt  algos.h  bench.cpp  build.sh  ccminer-cuda10.vcxproj  ccminer-cuda10.vcxproj.filters  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  configure.sh  cuda_groestlcoin.cu  cuda_vectors.h  miner.h  util.cpp
Algo256/: cuda_sha3t.cu
algos/allium/: README.md  allium.cu
algos/argon2d/: README.md  argon2d.cu  argon2d_fill.cu  argon2d_kernel.h  blake2b_kernels.cu
algos/balloon/: README.md  balloon.cpp  balloon_scan.cpp  cuda_balloon.cu
algos/blake256/: README.md
algos/blake2b/: README.md
algos/blake2s/: README.md
algos/bmw/: README.md  bmw.cu  bmw512.cu
algos/common/: cuda_x_fused.cu  cuda_x_stages.h
algos/cryptonight/: README.md  cryptonight-cpu.cpp  cryptonight-extra.cu
algos/curvehash/: README.md  curvehash.cu  curvehash_oracle.cpp  secp256k1_unity.c
algos/equihash/: README.md  cuda_equi_tromp.cu
algos/evohash/: README.md  evohash.cu
algos/fugue/: README.md
algos/ghostrider/: README.md  ghostrider.cu
algos/gost/: README.md  cuda_gosthash.cu
algos/groestlcoin/: README.md
algos/heavy/: README.md  bastion.cu  cuda_heavy_blake512.cu  cuda_heavy_groestl512.cu  cuda_heavy_keccak512.cu  heavy.cu  heavy.h
algos/heavyhash/: README.md
algos/hoohash/: README.md  cuda_hoohashv110.cu  hoohash.cu  hoohash_device.cuh
algos/hsr/: README.md  hsr.cu
algos/jha/: README.md  jackpotcoin.cu  jha.cu
algos/kawpow/: README.md  cuda_kawpow.cu  kawpow.cpp  kawpow_core.cpp  kawpow_core.h  kawpow_dag.cpp  kawpow_dag.h  kawpow_jit.cpp  kawpow_jit.h
algos/keccak/: README.md  cuda_keccak256.cu  cuda_keccak_selftest.cu  keccak256.cu
algos/lbry/: README.md  cuda_lbry_merged.cu  lbry.cu
algos/lyra2/: README.md  lyra2RE.cu  lyra2REv2.cu  lyra2REv3.cu
algos/myriadgroestl/: README.md  cuda_myriadgroestl.cu
algos/neoscrypt/: README.md
algos/odocrypt/: README.md  cuda_odocrypt.cu  odocrypt.h  odocrypt_host.cpp
algos/pentablake/: README.md  pentablake.cu
algos/polytimos/: README.md  polytimos.cu
algos/progpow_multi/: pp_params.h  ppmulti_bridge.cpp  ppmulti_core.cpp  ppmulti_core.h  ppmulti_dag.cpp  ppmulti_dag.h  ppmulti_epoch.cpp  ppmulti_epoch.h  ppmulti_jit.cpp  ppmulti_jit.h  progpow_pp.cpp  progpow_pp.hpp
algos/quark/: README.md  animecoin.cu  nist5.cu  quarkcoin.cu
algos/qubit/: README.md  deep.cu  luffa.cu  qubit.cu
algos/rinhash/: README.md  argon2d.cu  rinhash_scanhash.cpp  sha3-256.cu  sha3_256_device.cuh
algos/scrypt/: README.md  scrypt-jane.cpp  scrypt.cpp
algos/sha256d/: README.md  cuda_sha256_selftest.cu  cuda_sha256csm.cu  cuda_sha256d.cu  cuda_sha256t.cu  sha256d.cu
algos/sha256dv/: README.md  sha256dv.cu
algos/sha3d/: README.md  cuda_sha3d.cu  sha3d.cu
algos/sha3t/: README.md  cuda_sha3t.cu  sha3t.cu
algos/sha512256d/: README.md  cuda_sha512256d.cu  cuda_sha512256d_selftest.cu  sha512256d.cu
algos/sia/: README.md
algos/skein/: README.md  skein.cu  skein2.cpp
algos/skunk/: README.md  cuda_skunk.cu  skunk.cu
algos/soterg/: README.md  soterg.cu
algos/stages/: cuda_blake512.cu  cuda_bmw.cu  cuda_bmw512.cu  cuda_cubehash512.cu  cuda_cubehash512_80.cu  cuda_echo512_64.cu  cuda_echo512_compat.cu  cuda_echo512_final.cu  cuda_fugue512.cu  cuda_fugue512_80.cu  cuda_groestl512.cu  cuda_hamsi512.cu  cuda_haval256.cu  cuda_jh512.cu  cuda_keccak512.cu  cuda_luffa512.cu  cuda_luffa512_80.cu  cuda_luffaCubehash512.cu  cuda_sha512.cu  cuda_shabal512.cu  cuda_shavite512.cu  cuda_shavite512_80.cu  cuda_shavite512_legacy.cu  cuda_simd512.cu  cuda_simd512_80.cu  cuda_simd512_func.cuh  cuda_skein512.cu  cuda_streebog.cu  cuda_tiger192.cu  cuda_whirlpool512.cu  cuda_whirlpool512_80.cu  cuda_whirlpool_tables.cuh
algos/tribus/: README.md  tribus.cu
algos/verthash/: README.md  cuda_verthash.cu  verthash-cpu.c  verthash-cpu.h  verthash-data.cpp  verthash-data.h  verthash.cu
algos/whirlpoolx2/: README.md  cuda_whirlpoolx2.cu  whirlpoolx2.cu
algos/x11/: 0x10.cu  README.md  bitcore.cu  c11.cu  fresh.cu  phi.cu  s3.cu  sib.cu  timetravel.cu  veltor.cu  x11.cu  x11evo.cu
algos/x13/: README.md  x13.cu
algos/x15/: README.md  whirlpool.cu  x14.cu  x15.cu
algos/x16/: README.md  cuda_x16.h  cuda_x16_echo512.cu  cuda_x16_echo512_64.cu  cuda_x16_fugue512.cu  cuda_x16_fused.cu  cuda_x16_shabal512.cu  cuda_x16_shavite512.cu  x16r.cu  x16rv2.cu  x16s.cu
algos/x17/: README.md  hmq17.cu  hmq1725.cu  skydoge.cu  x17.cu
algos/x21/: README.md  x21s.cu
algos/x25x/: README.md  cuda_x25x_blake2s.cu  cuda_x25x_lane.cu  (+6 more)
balloon/: balloon.cpp  balloon_scan.cpp
compat/: ccminer-config.h
crypto/: cryptonight-core.cu
cuda/: aes_device.cuh  aes_sp_device.cuh  blake512_device.cuh  bmw512_device.cuh  cubehash512_device.cuh  echo512_device.cuh  fugue512_device.cuh  groestl512_device.cuh  hamsi512_device.cuh  jh512_device.cuh  keccak_device.cuh  luffa512_device.cuh  sha256_device.cuh  sha3_device.cuh  sha512_device.cuh  shabal512_device.cuh  shavite512_device.cuh  skein512_device.cuh  tiger192_device.cuh  whirlpool512_device.cuh  xfamily_selftest.cu
docs/: coding-guideline.md
equi/: blake2b_tromp.cuh  cuda_equi_tromp.cu  cuda_equi_tromp.h  equi-stratum.cpp  equi_miner_tromp.cuh  equi_tromp.h  equihash.cpp
evohash/: evohash.cu
ghostrider/: ghostrider.cu
hoohash/: blake3_hoo_device.cuh  cuda_hoohashv110.cu  hoohash_device.cuh
odocrypt/: cuda_odocrypt.cu
quark/: cuda_bmw512.cu  cuda_jh512.cu  cuda_quark.h  cuda_quark_blake512.cu  cuda_quark_groestl512.cu  cuda_quark_keccak512.cu  cuda_skein512.cu
res/: ccminer.rc
rinhash/: argon2d_device.cuh  rinhash.cu
sha256dv/: sha256dv.cu
sia/: sia.cu
skunk/: skunk.cu
sph/: blake2s.h  sph_panama.h
x11/: cuda_x11_aes.cuh  cuda_x11_cubehash512.cu  cuda_x11_echo.cu  cuda_x11_luffa512.cu  cuda_x11_shavite512.cu
x13/: cuda_x13_fugue512.cu  cuda_x13_hamsi512.cu
x15/: cuda_x14_shabal512.cu  cuda_x15_whirlpool.cu
x16/: cuda_x16_echo512.cu
x17/: cuda_x17_sha512.cu  skydoge.cu
x21/: cuda_sha256_2.cu  x21s.cu
(+12 files in other folders)
